# ts-nuget

./: .env.template  .gitignore  Cargo.toml
src/: main.rs  metadata.rs  nupkg.rs  subdomains.txt  template.nuspec
