[package]
name = "ts-nuget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hyper = { version = "0.14.18", features = ["stream"] }
once_cell = "1.10.0"
parking_lot = "0.12.0"
reqwest = { version = "0.11.10", default-features = false, features = ["gzip", "blocking", "json", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "fs", "macros", "parking_lot"] }
tokio-util = "0.7.1"
warp = { version = "0.3.2", features = ["compression-gzip", "tls"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
strip = "symbols"
