[package]
name = "ts-nuget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.23"
hyper = { version = "0.14.20", features = ["stream"] }
once_cell = "1.13.1"
parking_lot = "0.12.1"
reqwest = { version = "0.11.11", default-features = false, features = ["gzip", "blocking", "json", "rustls-tls"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "fs", "macros", "parking_lot"] }
tokio-util = "0.7.3"
warp = { version = "0.3.2", features = ["compression-gzip"] }
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
strip = "symbols"
