[package]
name = "ts-nuget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
futures = "0.3.25"
reqwest = { version = "0.12.12", default-features = false, features = ["gzip", "blocking", "json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "2.0.11"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "fs", "macros", "parking_lot", "sync"] }
tokio-util = "0.7.4"
tower-http = { version = "0.6.2", features = ["compression-gzip"] }
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[profile.release]
#lto = true
strip = "symbols"
